# hermes-lib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
hermes_lib/: __init__.py  cache.py  discovery.py  feeds.py  obsidian.py  runtime.py
tests/: test_cache.py  test_discovery.py  test_obsidian.py  test_runtime.py
