[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-lib"
version = "0.1.0"
description = "Shared primitives for Hermes ecosystem bots: artifact caching, HTTP feeds, credential helpers, and Obsidian sync."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
ssl = ["certifi"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["hermes_lib*"]
